--- a/index.html
+++ b/index.html
@@ -18,7 +18,11 @@
 	<div id="root">
 
 		<header class="header">
-			<div class="header__title">ToDo Desks</div>
+			<div>
+				<div class="header__title">ToDo Desks</div>
+				<div class="header__user" data-header-user-name></div>
+			</div>
+			<img src="" alt="Avatar" class="header__avatar" data-header-avatar>
 			<div class="header__clock" data-header-clock></div>
 		</header>
 
